# data-crane

./: go.mod  go.sum
client/cpp/: Makefile  client.cc  client.h  client.py  python.cc  setup.py
core/downloadmanager/v1/: manager.go
core/prefetcher/v1/: prefetch.go
fsconverter/: converter.go  db.go  db_test.go  go.mod  go.sum  log.go  main.go  types.go
lrd/: hash.go  lrd.go
mgo2es/: README.md
mldb-sdk/: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Makefile  Makefile-another  README.md  cmake_install.cmake  install-dep.sh
mldb-sdk/python/mldb/: __init__.py  dispatcher.py  io.py  prefetcher.py
mldb-sdk/src/: munal-build.sh  pybind11.cc  python.h  sdk.cc  sdk.h  setup-build.sh  setup.py
mldb-sdk/src/common/: file.cc  file.h  filepath.cc  filepath.h  string.h  utils.h
mldb-sdk/src/crane/: client.cc  client.h  crane.grpc.pb.cc  crane.grpc.pb.h  crane.pb.cc  crane.pb.h
mldb-sdk/src/http/: httprequest.cc  httprequest.h  interface.h
mldb-sdk/src/log/: log.h
mldb-sdk/src/test/: httprequest.cc
mldb-sdk/src/uri/: uri.cc  uri.h
mldb-sdk/src/version/: version.h
proto/: all.proto
python_sdk/mldb/databatch/: mapper.py
python_sdk/mldb/dataset/: dataset_batch.py
s3/: types.go
stats-muse/logwatcher/: stats.py  taif.py
utils/debounce/: debounce.go  debounce_test.go
